Compucom CCQA Org 100919/src/objects/Planning_Financial_Measure__c.object
<CustomObject>
    <fields>
        <fullName>Automatically_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Methodology_Description__c</fullName>
        <label>Cal Meth Unused Field</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account__c</fullName>
        <description>This represents the General Ledger account that corresponds to the Accounting System (ERP)</description>
        <label>General Ledger Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_Description__c</fullName>
        <description>Description and explanation of how the Financial Measure is used in Planning activities</description>
        <label>Measure Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Measure_Type__c</fullName>
        <description>Measure type will influence how the value is used in calculations and reporting</description>
        <label>Measure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>KPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_by_Revenue_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted by Revenue Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>FTE</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FCST Planning Measure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Planning Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Planning Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Methodology_Description_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Automatically_Calculated__c  = TRUE,
OR(
ISBLANK( Calculation_Methodology_Description__c )
))</errorConditionFormula>
        <errorDisplayField>Calculation_Methodology_Description__c</errorDisplayField>
        <errorMessage>This field is required when the Check Box &quot;Automatically Calculated&quot; is checked</errorMessage>
    </validationRules>
</CustomObject>